--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 ultralytics>=8.2.0
 torch>=2.2.0
 torchvision>=0.17.0
+numpy>=1.24.0
 PyYAML>=6.0.1
 opencv-python>=4.8.1.78
-pymongo>=4.6.0
-playsound==1.2.2
+pymongo[srv]>=4.6.0
+playsound>=1.3.0
